sitemedia/scss/site.scss
/* ... */
.event-detail {
	/* very similar to project detail and profile;
	  TODO: make mixins or includes for common layout */
	@include grid-container;

	header {
		@include grid-container;
        @include grid-collapse;

    	/* full width of container */
    	margin-left: 0;
    	margin-right: 0;
    	width: auto;

  		@include grid-push(3);
		@include grid-media($large-grid) {
			@include grid-container;
	        @include grid-collapse($large-grid);
	  		@include grid-push(3);
	  	}
	    @media (max-width: $small-max-width) {
	    	@include grid-push(0);
	    	/* full width of container */
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }

	  	.short_description {   /* equiv to project short_description */
	  		font-style: italic;
	  		font-family: $font-stack-body-text;
	  		color: $dark-grey;
	  		font-size: 21px;

			margin-left: 0;
		    margin-right: 0;
	    	width: auto;

			@include grid-media($large-grid){
			    @include grid-column(7);
			    margin-left: 0;
			}

	  	}
	}
	.details {
		/* same sidebar layout as project contributors */
		margin-bottom: 35px;
		font-family: $font-stack-headline;
		color: $dark-grey;
		font-size: 18px;

		@include grid-column(3);
		@include grid-media($large-grid){
		    @include grid-column(3);
		}
	    @media (max-width: $small-max-width) {
	    	width: 100%;
	    }

	    @media (max-width: $small-max-width) {
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }

		ul {
			list-style-type: none;
			color: $dark-grey;
			padding: 0;
		}

		 a {
	    	color: $dark-grey;
	    	text-decoration: none;
	    	font-family: $font-stack-headline;
	    	font-size: 18px;

	    	&.ical {
	    		margin-top: 37px;
	    		padding-top: 75px;
	    		display: block;
				background-image: url('../img/icons/CDH_icon_cal.svg');
				background-size: 50px 54px;
				background-repeat: no-repeat;

	    	}
	    }

	    .location {
	    	margin-top: 16px;
	    }
	}

	img {
		margin: 0 0 50px 0;
    	width: auto;
	}

	.description {
		@include grid-column(6);

		@include grid-media($large-grid){
		    @include grid-column(9);
		}

		@media (max-width: $small-max-width) {
	    	margin-left: 0;
	    	margin-right: 0;
	    	width: auto;
	    }

		img {
			max-width: 100%;
			margin: 50px auto;
		}
		p {
			margin-top: 0;
		}
	}

}

section.blogposts {
	@include grid-container;
}

.blogpost {
	// margin-top: 340px; // currently handled by spacer div
	padding: 0;
	margin-bottom: 50px;

	@include grid-media($large-grid) {
		@include grid-shift(2);
		@include grid-column(8);
	}
	header {
		h1 {
			margin-top: 250px - $header-nav-height;
			margin-bottom: 50px;
		}

		.byline {
			font-family: $font-stack-headline;
			font-size: 16px;
			color: $dark-grey;
			margin-bottom: 50px;

			.authors {
				padding-right: 37px;
				display: inline-block;

				@media (max-width: $small-max-width) {
					display: block;
					padding-right: 0;
				}
			}
		}

		a {
			color: $dark-grey;
			text-decoration: none;
		}
	}

	p {
		margin-bottom: 50px;
	}

	.keywords {
		font-size: 90%;
		color: $dark-grey;
	}
}

/* same width/side margins as blog post content */
.richtextpage #maincontent {
	padding: 0;
	margin-bottom: 50px;

	@include grid-media($large-grid) {
		@include grid-shift(2);
		@include grid-column(8);
	}
}


.pagination, .feeds {
	text-align: center;
	color: $dark-grey;
	a {
		text-decoration: none;
		color: $dark-grey;

		&.current {
		  /* use background to do a colored underline */
		  background-image: linear-gradient(to right, $cdh-blue 100%, transparent 0%);
		  background-position: 0 0.85em;
		  background-repeat: repeat-x;
		  background-size: 8px 2px;
		}
	}
}

.feeds {
	@extend .responsive-container;
	text-align: left;
	font-size: small;
	margin-top: 50px;
	font-family: $font-stack-headline;
}

.error-page {
	img {
		width: 50%;
	}
}

